potential fixed error. needs to be tested live on mobile.
syntax error was found in the #output div, in which I should of added
the class of row. Without the row class the #copywrite div was
overlapping the #output div, preventing the buttons from being clicked.

--- a/SCSS/layouts/_alert.scss
+++ b/SCSS/layouts/_alert.scss
@@ -2,4 +2,8 @@
   background: #757D75;
   color: white;
   font:14pt;
+.close {
+	width: 40px !important;
+	font-size: 40px !important;
+}
 }
